# Safe-Renderer

./: .gitignore  .travis.yml  CMakeLists.txt  MakeDkWinJunction.bat  README.md
engine/: CMakeLists.txt
engine/cmake/: EnginePlatformSpecific.cmake
engine/cmake/engine_platform_specific/: Windows.cmake
engine/common/: CMakeLists.txt  Common.cmake
engine/common/api/: Assertion.h  HealthLog.h  LSREngineError.h  LSRError.h  LSRErrorCollector.h  LongTermPtr.h  LsrLimits.h  LsrTypes.h  NodeDataLength.h  NonCopyable.h  PSCError.h  PSCErrorCollector.h  Pool.h  PoolMarker.h  PooledObjectFactory.h  PscLimits.h  PscTypes.h  ReturnValue.h  Timer.h
engine/common/src/: Assertion.cpp
engine/common/test/: AssertionTest.cpp  CMakeLists.txt  LSRErrorCollectorTest.cpp  LongTermPtrCorrupter.h  LongTermPtrTest.cpp  NodeDataLengthTest.cpp  PSCErrorCollectorTest.cpp  PoolCorrupter.h  PoolFaultInjectionTest.cpp  PoolMarkerTest.cpp  PoolTest.cpp  PoolTestHelper.h  PoolTestTypes.h  PooledObjectFactoryTest.cpp  ReturnValueTest.cpp  SelfCheckerClass.h  TimerTest.cpp
engine/communication/: CMakeLists.txt  Communication.cmake
engine/communication/api/: IFuConnection.h  IMsgDispatcher.h  IMsgReceiver.h  IMsgTransmitter.h  InputStream.h  MessageHeader.h  OutputStream.h  PgwOdiComSession.h  PgwOdiComSessionBase.h  PilOdiComSession.h  PilOdiComSessionBase.h
engine/communication/src/: InputStream.cpp  MessageHeader.cpp  OdiRecorder.cpp  OdiRecorder.h  OutputStream.cpp  PgwMsgTransmitter.cpp  PgwMsgTransmitter.h  PgwOdiComSessionBase.cpp  PilMsgTransmitter.cpp  PilMsgTransmitter.h  PilOdiComSessionBase.cpp
engine/communication/test/: CMakeLists.txt  InputStreamCorrupter.h  InputStreamTest.cpp  MessageHeaderTest.cpp  OdiRecorderTest.cpp  OutputStreamCorrupter.h  OutputStreamTest.cpp  PgwMsgTransmitterTest.cpp  PgwOdiComSessionTest.cpp  PgwOdiComSessionTestAuxiliary.h  PgwOdiComSessionUtilsTest.cpp  PilMsgTransmitterTest.cpp  PilOdiComSessionTest.cpp  PilOdiComSessionTestAuxiliary.h  PilOdiComSessionUtilsTest.cpp
engine/database/: CMakeLists.txt  DataBase.cmake  DataBaseMock.cmake
engine/database/api/: Area.h  BitmapAccess.h  Color.h  Database.h  DatabaseTypes.h  FonBinReader.h  ImageAttributes.h  LsrImage.h  PopulusImage.h  ResourceBuffer.h  StaticBitmap.h  ddh_defs.h
engine/database/src/: Area.cpp  BitmapAccess.cpp  Database.cpp  FonBinReader.cpp  LsrImage.cpp  LsrImageTypes.h  PopulusImage.cpp  PopulusImageTypes.h  StaticBitmap.cpp
engine/database/test/: AreaTest.cpp  BitmapIdTableTypeFactory.h  CMakeLists.txt  ColorTest.cpp  DDHTypeFactory.h  DDHTypeTest.cpp  DatabaseAccessor.h  DatabaseMock.cpp  DatabaseTest.cpp  DdhArrayObject.h  DdhObject.h  EnumerationBitmapMapTypeFactory.h  ExpressionTermTypeFactory.h  ExpressionTypeFactory.h  FieldTypeFactory.h  FieldsTypeFactory.h  FonBinReaderTest.cpp  FonBinWriter.h  HMIGlobalSettingsTypeFactory.h  LsrImageTest.cpp  PageDatabaseTypeFactory.h  PageTypeFactory.h  PanelDatabaseTypeFactory.h  PanelTypeFactory.h  PopulusImageTest.cpp  ReferenceBitmapFieldTypeFactory.h  StaticBitmapFieldTypeFactory.h  pgw.cpp  pil.cpp
engine/datahandler/: CMakeLists.txt  DataHandler.cmake
engine/datahandler/api/: BitmapExpression.h  BoolExpression.h  DataContext.h  DataHandler.h  DataStatus.h  DefaultDataContext.h  Expression.h  IDataHandler.h  Number.h  NumberExpression.h
engine/datahandler/src/: BitmapExpression.cpp  BoolExpression.cpp  DataHandler.cpp  DefaultDataContext.cpp  Expression.cpp  ExpressionOperators.cpp  ExpressionOperators.h  NumberExpression.cpp
engine/datahandler/test/: BitmapExpressionTest.cpp  BoolExpressionTest.cpp  CMakeLists.txt  DataContextTest.cpp  DataHandlerTest.cpp  DataStatusTest.cpp  DefaultDataContextTest.cpp  ExpressionBooleanOperatorsTest.cpp  ExpressionFallbackTest.cpp  ExpressionItemAtOperatorTest.cpp  ExpressionMinMaxOperatorTest.cpp  ExpressionRedundancyTest.cpp  ExpressionSubscriptionTest.cpp  ExpressionTest.cpp  ExpressionTestFixture.h  MockDataHandler.h  MockListener.h  NumberExpressionTest.cpp  NumberTest.cpp  TestDataContext.h
engine/display/: CMakeLists.txt  Display.cmake  DisplayMock.cmake
engine/display/api/: Canvas.h  DisplayManager.h  Texture.h  TextureCache.h  WindowCanvas.h  WindowDefinition.h
engine/display/src/: Canvas.cpp  DisplayManager.cpp  Texture.cpp  TextureCache.cpp  WindowCanvas.cpp
engine/display/test/: CMakeLists.txt  CanvasMock.cpp  DisplayAccessor.h  DisplayTest.cpp  MockGIL.cpp  MockGIL.h  TelltalesDisplayTest.cpp  TelltalesDisplayTest.h  TextureTest.cpp
engine/framehandler/: CMakeLists.txt  FrameHandler.cmake
engine/framehandler/api/: BitmapField.h  Field.h  Frame.h  FrameHandler.h  Panel.h  ReferenceBitmapField.h  Widget.h  WidgetChildren.h  WidgetPool.h  Window.h
engine/framehandler/src/: BitmapField.cpp  Field.cpp  Frame.cpp  FrameHandler.cpp  Panel.cpp  ReferenceBitmapField.cpp  Widget.cpp  Window.cpp
engine/framehandler/test/: BitmapFieldTest.cpp  CMakeLists.txt  FieldTest.cpp  FrameHandlerCorrupter.h  FrameHandlerTest.cpp  FrameTest.cpp  MockCanvas.cpp  MockCanvas.h  MockWidget.h  PanelTest.cpp  PglHelper.h  ReferenceBitmapFieldTest.cpp  TestCanvas.h  WidgetPoolCorrupter.h  WidgetPoolHelper.cpp  WidgetPoolHelper.h  WidgetPoolTest.cpp  WidgetTest.cpp  WidgetTestBase.h  WindowTest.cpp  (+1 more)
engine/lsr/: CMakeLists.txt
engine/odi/: CMakeLists.txt  Odi.cmake
engine/psc/: CMakeLists.txt
gil/: CMakeLists.txt
gil/api/: gil.h  gil_sw_memory_configuration.h  imx6_rendering_configuration.h
gil/test/: CMakeLists.txt  GilSampleTest.cpp  Gil_sw_win32_Test.cpp  gil_test_images.c
pgl/: CMakeLists.txt
pgl/api/: pgl.h
pgl/test/: CMakeLists.txt  PglTest.cpp  Pgl_sw_win32_Test.cpp  pgl_test_images.c
pgw/: CMakeLists.txt  Pgw.cmake
pgw/api/: pgw.h
pil/: CMakeLists.txt  Pil.cmake
pil/api/: pil.h
simu/: CMakeLists.txt
simu/communication/: CMakeLists.txt
simu/datahandler/: CMakeLists.txt
simu/odi/: CMakeLists.txt
simu/src/: FUBridge.cpp  FUBridge.h  MsgTransceiverTCP.cpp  MsgTransceiverTCP.h  ODIComSession.cpp  ODIComSession.h  getopt_long.c  logmsg.h  main.cpp
(+256 files in other folders)
